tests/paczka1/small_fuzzy/90541402.err
Error in line 2: KVNZDkjd2z A464 98,9
Error in line 3: KVNZDkjd2z S302 75,0
Error in line 8: yKIINHzUmaS A464 8,43
Error in line 5: wUS S302 10,7
Error in line 11: yKIINHzUmaS A464 46,3
Error in line 14: wUS A464 26,0
